# dockyard

./: .gitignore  .travis.yml  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  build.rs  lcov.info
.cargo/: audit.toml
.github/: dependabot.yml
.github/workflows/: rust.yml
src/: backup.rs  cleanup.rs  cli.yml  container.rs  file.rs  lib.rs  main.rs  restore.rs  watch.rs
tests/: backup_and_restore_test.rs
tests/common/: mod.rs
