[package]
name = "dockyard"
description = "Back up and restore Docker resources"
version = "0.1.2"
authors = ["Aaron Griffin <aig787@gmail.com>"]
homepage = "https://github.com/aig787/dockyard"
repository = "https://github.com/aig787/dockyard"
documentation = "https://docs.rs/dockyard"
license = "MIT"
build = "build.rs"
keywords = ["docker"]
readme = "README.md"
edition = "2018"

[[bin]]
name = "dockyard"
path = "src/main.rs"

[dependencies]
#bollard = "0.8.0"
bollard = { git = "https://github.com/fussybeaver/bollard/"}
futures = "0.3.4"
futures-core = "0.3.4"
futures-util = "0.3.4"
tokio = { version = "0.2.2", features = ["time",  "signal", "macros"] }
log = "0.4"
simple_logger = "1.11.0"
clap = { version = "2", features = ["yaml"] }
flate2 = "1.0"
tar = "0.4.30"
chrono = "0.4.19"
anyhow = "1.0.34"
uuid = { version = "0.8.1", features = ["v4"] }
serde_json = "1.0.66"
serde = { version = "1.0.116", features = ["derive"] }
base64 = "0.13.0"
rand = "0.7.3"
tempfile = "3.1.0"
cron = "0.6.1"
lazy_static = "1.4.0"

[build-dependencies]
vergen = "3"

[dev-dependencies]
